Fix alignment

--- a/src/output.css
+++ b/src/output.css
@@ -588,6 +588,14 @@ video {
   margin-top: 0;
 }
 
+.mb-\[1rem\] {
+  margin-bottom: 1rem;
+}
+
+.mt-\[1rem\] {
+  margin-top: 1rem;
+}
+
 .flex {
   display: flex;
 }
@@ -701,19 +709,14 @@ video {
   background-color: rgb(129 140 248 / var(--tw-bg-opacity));
 }
 
-.bg-red-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(248 113 113 / var(--tw-bg-opacity));
-}
-
-.bg-green-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(34 197 94 / var(--tw-bg-opacity));
-}
-
 .bg-red-300 {
   --tw-bg-opacity: 1;
   background-color: rgb(252 165 165 / var(--tw-bg-opacity));
+}
+
+.bg-red-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 113 113 / var(--tw-bg-opacity));
 }
 
 .p-1 {
@@ -746,6 +749,18 @@ video {
 
 .pr-\[0\.75rem\] {
   padding-right: 0.75rem;
+}
+
+.pl-\[1rem\] {
+  padding-left: 1rem;
+}
+
+.pr-2 {
+  padding-right: 0.5rem;
+}
+
+.pl-2 {
+  padding-left: 0.5rem;
 }
 
 .text-left {
